--- a/Test-form.html
+++ b/Test-form.html
@@ -26,32 +26,54 @@
     
     <script type="text/jsx">
         /** @jsx React.DOM */
+
         var TodoList = React.createClass({
             getInitialState: function() {
                 return {
-                    Todotext: ''
+                    ListData:[]
                 };
             },
 
             handleKeyDown: function (e) {
-                if (e.keyCode == 13) {
+                if (e.keyCode === 13) {
+                    var array = this.state.ListData;
+                    array.push(e.target.value);
+
                     alert("Pressed ENTER.");
-                    this.setState({Todotext:e.target.value});
+                    this.setState({ListData:array});
                     return false;
                 }
             },
 
             render: function() {
-                console.log(this.state.Todotext);
+                var list = this.state.ListData,
+                    listElms;
+
+                    listElms = list.map(function(item, i) {
+                        return (
+                            <li> {list[i]} </li>
+                        );
+                    });
+
+                console.log(this.state.ListData);
+
                 return (
                     <div>
                         <div className="panel panel-default">
                             <div className="panel-body">
-                                <input type="text" placeholder="What needs to be done?" onKeyDown={this.handleKeyDown}/>
+                                <input type="text" className="form-control" onKeyDown={this.handleKeyDown} placeholder="What needs to be done?" />
                             </div>
                         </div>
-                        <ul className="list-group">{this.state.Todotext}</ul>
+                        <ul><listTodo val={listElms} /></ul>
                     </div>
+                );
+            }
+        });
+
+        var listTodo = React.createClass({
+            render: function() {
+                return (
+                    <li className="list-group">{this.props.val}</li>
                 );
             }
         });
