--- a/Test-form.html
+++ b/Test-form.html
@@ -30,6 +30,7 @@
         var TodoList = React.createClass({
             getInitialState: function() {
                 return {
+                    userinput:'',
                     ListData:[]
                 };
             },
@@ -41,8 +42,13 @@
 
                     alert("Pressed ENTER.");
                     this.setState({ListData:array});
+                    this.setState({userinput:''});
                     return false;
                 }
+            },
+
+            handleOnChange: function  (e) {
+                this.setState({userinput:e.target.value});
             },
 
             render: function() {
@@ -61,7 +67,7 @@
                     <div>
                         <div className="panel panel-default">
                             <div className="panel-body">
-                                <input type="text" className="form-control" onKeyDown={this.handleKeyDown} placeholder="What needs to be done?" />
+                                <input type="text" value={this.state.userinput} className="form-control" onChange={this.handleOnChange} onKeyDown={this.handleKeyDown} placeholder="What needs to be done?" />
                             </div>
                         </div>
                         <ul><listTodo val={listElms} /></ul>
